修改 选择外部链接的bug 以及 当输入的是外部链接 底部导航，点击的问题

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -272,7 +272,11 @@
                     /* 非会员显示二维码 */
                     showSwiper();
                 } else {
-                    window.location.href = "http://"+ window.location.host + url;
+                    if( url.indexOf('http://') == 0 || url.indexOf('https://') == 0){
+                        window.location.href = url;
+                    }else{
+                        window.location.href = "http://"+ window.location.host + url;
+                    }
                 }
             });
             
