移动百宝箱到微商城，换面包屑为正确的地址

--- a/weapp/apps/customerized_apps/event/templates/editor/event_status.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/event_status.html
@@ -5,7 +5,7 @@
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
-			<li><a href="/apps/">百宝箱</a></li>
+			<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
 			<li class="active">活动</li>
 		</ul>
 	</div>
