--- a/weapp/apps/customerized_apps/vote/templates/editor/vote_participance.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/vote_participance.html
@@ -4,7 +4,7 @@
 <div class="xui-voteParticipanceFormPage xui-appPage-commonStyle">
 	<ul class="breadcrumb" style="margin-bottom:-12px;">
 		<li>您当前所在位置</li>
-		<li><a href="/apps/">百宝箱</a></li>
+		<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
 		<li><a href="/apps/vote/votes/">微信投票</a></li>
 		<li class="active">新建微信投票</li>
 	</ul>
