--- a/weapp/apps/customerized_apps/event/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/workbench.html
@@ -8,7 +8,7 @@
   <div class="relative">
     <ul class="breadcrumb">
       <li>您当前所在位置</li>
-      <li><a href="/apps/">百宝箱</a></li>
+      <li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
       <li><a href="/apps/event/events/">活动报名</a></li>
       <li class="active">新建活动</li>
     </ul>
