--- a/weapp/apps/customerized_apps/feedback/templates/editor/feedback_participance.html
+++ b/weapp/apps/customerized_apps/feedback/templates/editor/feedback_participance.html
@@ -4,7 +4,7 @@
 <div class="xui-feedbackParticipanceFormPage xui-appPage-commonStyle">
 	<ul class="breadcrumb" style="margin-bottom:-12px;">
 		<li>您当前所在位置</li>
-		<li><a href="/apps/">百宝箱</a></li>
+		<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
 		<li><a href="/apps/feedback/feedbacks/">用户反馈</a></li>
 		<li class="active">新建用户反馈</li>
 	</ul>
