--- a/weapp/apps/customerized_apps/lottery/templates/editor/lottery_participance.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/lottery_participance.html
@@ -11,7 +11,7 @@
 <div class="xui-lotteryParticipanceFormPage xui-appPage-commonStyle">
 	<ul class="breadcrumb" style="margin-bottom:-12px;">
 		<li>您当前所在位置</li>
-		<li><a href="/apps/">百宝箱</a></li>
+		<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
 		<li><a href="/apps/lottery/lotteries/">微信抽奖</a></li>
 		<li class="active">新建微信抽奖</li>
 	</ul>
