--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_status.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_status.html
@@ -5,7 +5,7 @@
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
-			<li><a href="/apps/">百宝箱</a></li>
+			<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
 			<li class="active">用户调研</li>
 		</ul>
 	</div>
