--- a/weapp/apps/customerized_apps/vote/templates/editor/vote_participances.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/vote_participances.html
@@ -17,7 +17,7 @@
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
-			<li><a href="/apps/">百宝箱</a></li>
+			<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
 			<li><a href="/apps/vote/votes/">微信投票</a></li>
 			<li class="active">查看结果</li>
 		</ul>
