fix lottery bugs

--- a/weapp/apps/app_template/templates/editor/participance_list_template.html
+++ b/weapp/apps/app_template/templates/editor/participance_list_template.html
@@ -1,6 +1,14 @@
 <% extends "content_base_v2.html" %>
 <% load apps_filter %>
 __STRIPPER_TAG__
+{% block css %}
+    <style>
+        .tl.pl25 img{
+            height: 60px;
+            width: 60px;
+        }
+    </style>
+{% endblock %}
 <% block content-panel %>
 <div class="xui-{{resource.class_name}}AppPage xui-appPage-commonStyle">
 	<div class="relative">
