--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -332,10 +332,9 @@
                     }
                     $submitButtonContainer.show();
                 }
-                console.log("!!!!!!!!!!!!!!!!!!");
-                console.log(W.isPC,"W.isPC");
                 if (W.isPC){
                     $('.xa-submitTermite').unbind('click');
+                    $('.xa-lottery-go').unbind('click');
                 }
                 else{
                     $('.xa-submitTermite').click(function() {
