现在的百宝箱 改名为  旧百宝箱

--- a/weapp/templates/content_base.html
+++ b/weapp/templates/content_base.html
@@ -42,7 +42,7 @@
                 <a href="/stats/manage_summary/" title='数据统计'>数据统计</a>
             </li>-->
             <li>
-                <a {% ifequal first_nav_name 'apps' %}class="active"{% endifequal %} {% ifequal first_nav_name 'market_tools' %}class="active"{% endifequal %} href="/old_apps/" title='百宝箱'>百宝箱</a>
+                <a {% ifequal first_nav_name 'apps' %}class="active"{% endifequal %} {% ifequal first_nav_name 'market_tools' %}class="active"{% endifequal %} href="/old_apps/" title='百宝箱'>旧百宝箱</a>
             </li>
             {% if user|is_system_manager %}
             <li>
