解决多次提交的问题

--- a/weapp/mall/templates/mall/editor/promotion/create_integral_sale.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_integral_sale.html
@@ -332,7 +332,9 @@ $(document).ready(function() {
 	});
 
 	$('.xa-submit').click(function(event) {
+		$(this).attr("disabled",true);
 		if (!W.validate()) {
+			$(this).attr("disabled",false);
 			return false;
 		}
 		//获取integral sale rule
