--- a/weapp/mall/templates/mall/editor/promotion/create_flash_sale.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_flash_sale.html
@@ -206,7 +206,9 @@ $(document).ready(function() {
 	productSelector.render();
 
 	$('.xa-submit').click(function(event) {
+		$(this).attr("disabled",true);
 		if(!W.validate()) {
+			$(this).attr("disabled",false);
 			return false;
 		}
 		var args = $('.xa-form').serializeObject();
@@ -224,7 +226,8 @@ $(document).ready(function() {
 				}, 500)
 			},
 			error: function(resp) {
-				W.showHint('error', '创建限时抢购失败!')
+				W.showHint('error', '创建限时抢购失败!');
+				$(this).attr("disabled",false);
 			}
 		})
 	});
