--- a/weapp/apps/templates/apps/user_apps_list.html
+++ b/weapp/apps/templates/apps/user_apps_list.html
@@ -167,7 +167,7 @@ button.close {
                     <h3 class="modal-title" >系统公告</h3>
                 </div>
                 <div class="modal-body">
-                    新百宝箱已升级路径为微商城>百宝箱，旧百宝箱将于9月15日关闭入口，在此期间旧百宝箱只能查看原始数据不能创建新活动。如需创建新活动请点击这里，谢谢支持！
+                    新百宝箱已升级路径为微商城>百宝箱，旧百宝箱将于9月15日关闭入口，在此期间旧百宝箱只能查看原始数据不能创建新活动。如需创建新活动请<a href="/apps/lottery/lotteries/">点击这里</a>，谢谢支持！
                 </div>
             </div>
         </div>
