注释掉旧百宝箱内的新建按钮

--- a/weapp/market_tools/tools/activity/templates/activity/editor/activities.html
+++ b/weapp/market_tools/tools/activity/templates/activity/editor/activities.html
@@ -8,7 +8,7 @@
 		<li class="active">活动列表</li>
 	</ul>
 	<span class="breadcrumRightButton">
-		<a class="btn btn-primary" href="./activity/create/">添加活动<i class="icon-plus icon-white"></i></a>
+{#		<a class="btn btn-primary" href="./activity/create/">添加活动<i class="icon-plus icon-white"></i></a>#}
 	</span>
 </div>
 
