--- a/weapp/market_tools/tools/lottery/templates/lottery/editor/list_lottery.html
+++ b/weapp/market_tools/tools/lottery/templates/lottery/editor/list_lottery.html
@@ -8,7 +8,7 @@
 		<li class="active">微信抽奖</li>
 	</ul>
 	<span class="breadcrumRightButton">
-		<a class="btn btn-primary" href="/market_tools/lottery/edit/0/"><i class="icon-plus icon-white"></i>添加抽奖活动</a>
+{#		<a class="btn btn-primary" href="/market_tools/lottery/edit/0/"><i class="icon-plus icon-white"></i>添加抽奖活动</a>#}
 	</span>
 </div>
 
