--- a/weapp/market_tools/tools/red_envelope/templates/red_envelope/editor/list_red_envelope.html
+++ b/weapp/market_tools/tools/red_envelope/templates/red_envelope/editor/list_red_envelope.html
@@ -8,7 +8,7 @@
 		<li class="active">微信红包</li>
 	</ul>
 	<span class="breadcrumRightButton">
-		<a class="btn btn-primary" href="/market_tools/red_envelope/edit/0/"><i class="icon-plus icon-white"></i>添加微信红包</a>
+{#		<a class="btn btn-primary" href="/market_tools/red_envelope/edit/0/"><i class="icon-plus icon-white"></i>添加微信红包</a>#}
 	</span>
 </div>
 
