--- a/weapp/market_tools/tools/research/templates/research/editor/researches.html
+++ b/weapp/market_tools/tools/research/templates/research/editor/researches.html
@@ -8,7 +8,7 @@
 		<li class="active">调研列表</li>
 	</ul>
 	<span class="breadcrumRightButton">
-		<a class="btn btn-primary" href="./research/create/">添加调研<i class="icon-plus icon-white"></i></a>
+{#		<a class="btn btn-primary" href="./research/create/">添加调研<i class="icon-plus icon-white"></i></a>#}
 	</span>
 </div>
 
