--- a/weapp/market_tools/tools/vote/templates/vote/editor/vote_list.html
+++ b/weapp/market_tools/tools/vote/templates/vote/editor/vote_list.html
@@ -7,7 +7,7 @@
 		<li class="active">投票列表</li>
 	</ul>
 	<span class="breadcrumRightButton">
-		<a class="btn btn-primary" href="/market_tools/vote/add/">添加投票<i class="icon-plus icon-white"></i></a>
+{#		<a class="btn btn-primary" href="/market_tools/vote/add/">添加投票<i class="icon-plus icon-white"></i></a>#}
 	</span>
 </div>
 
