--- a/weapp/apps/customerized_apps/survey/templates/webapp/result_survey.html
+++ b/weapp/apps/customerized_apps/survey/templates/webapp/result_survey.html
@@ -92,7 +92,7 @@
                 <li class="wui-i-item">
                     <label class="wui-i-label" style="width: 43px;">{{ item.title }}</label>
                     <div class="wui-i-inputContainer xa-inputControl" >
-                        <input class="wui-i-input" type="text"  placeholder="" value="{{ item.values }}" style="background:#fff;color:#595959;font-size:13px;" disabled>
+                        <input class="wui-i-input" type="text"  placeholder="" value="{{ item.values }}" style="background:#fff;color:#3F3E3E;font-size:13px;" disabled>
                     </div>
                 </li>
             </ul>
