[update]BUG 4341 订单中的备注功能，.py change by liujing

--- a/weapp/mall/templates/mall/editor/order_detail.html
+++ b/weapp/mall/templates/mall/editor/order_detail.html
@@ -543,7 +543,7 @@
             title: '备注',
             position:'top',
             isTitle: false,
-            privateContainerClass:'xui-remarkDropBox'
+            privateContainerClass:'xui-remarkDropBox xa-remarkDropBox'
           });
           mallOrderRemarkView.show({
             $action: $el,
