--- a/weapp/static_v2/js/view/mall_order_remark/template.html
+++ b/weapp/static_v2/js/view/mall_order_remark/template.html
@@ -1,6 +1,6 @@
 <script id="remark-info-view" type="text/x-jquery-tmpl">
 	<div class="fl" style="width:254px;margin-left:25px;margin-top:15px;">
-		<input name="remark" class="form-control" type="text" placeholder="最多输入300字" style="padding:2px 10px;box-sizing:initial"/>
+		<input name="remark" class="form-control" type="text" placeholder="最多输入300字" style="padding:2px 10px;box-sizing:initial" maxlength="300"/>
 		
 		
 	</div>
